# MVP-LLM_usage_server

./: .gitignore  main.py  pyproject.toml
app/: config.py
app/api/: auth_routes.py  email_generator.py  feedback_generator.py  graph.py  loveable_graph_routes.py  loveable_rag_routes.py  loveable_regex_check_routes.py  stream.py  text_cratfer.py
app/api/models/: schemas.py
app/auth/: database.py  models.py  schemas.py  utils.py
app/graph/: graph.py  state.py
app/graph/chains/: OPTIONAL_validate_cv.py  add_style_and_optimize.py  collect_all_cv_data.py  compare_cv_to_offer.py  cv_data_model.py  extract_cv_data.py  generate_cv_structure.py  job_description_model.py  remove_nonrelevant_data.py
app/graph/hitl/: acceptation_cv_data.py  additional_cv_info.py
app/graph/nodes/: OPTIONAL_validate_cv.py  add_style_and_optimize.py  collect_all_cv_data.py  compare_cv_to_offer.py  extract_cv_node.py  generate_cv_structure.py  human_review.py  search_job_description_agent.py
app/graph/utils/: file_preprocessing.py
app/loveable_features/graph/: contitional_edges.py  graph.py  state.py
app/loveable_features/rag/: prompt.py  rag.py
app/loveable_features/regex_check/: __init__.py  blacklist.py  blacklist_utils.py  detectors.py  filters.py  parser.py  patterns.py
app/loveable_features/utils/: process_graphs.py
app/services/: feedback_service.py  graph_dependencies.py  graph_service.py  graph_service_old.py
app/services/email/: draft_creator.py  email_gen_service.py  final_email.py  profanity.py  schemas.py  (+1 more)
app/text_crafter/: graph.py  schemas.py  state.py
(+42 files in other folders)
