[project]
name = "SLII_openai_server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "pydantic[email]",
    "python-dotenv>=1.1.1",
    "bcrypt==4.0.1",
    "motor>=3.7.1",
    "pymongo>=4.15.1",
    "openai>=2.0.1",
    "black>=25.9.0",
    "openai-agents>=0.0.6",
]
